# pepng

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  shell.nix  webgl.sh
models/logo/: scene.dae
models/pa2/: scene.dae
models/primitives/: cone.dae  cube.dae  cylinder.dae  sphere.dae
shaders/line/: fragment.glsl  vertex.glsl
shaders/object/: fragment.glsl  vertex.glsl
shaders/shadow/: fragment.glsl  fragment330.glsl  geometry.glsl  vertex.glsl  vertex330.glsl
shaders/skybox/: fragment.glsl  vertex.glsl
src/: main.cpp
src/component/: components.hpp  extra_material.cpp  extra_material.hpp  extra_renderer.cpp  extra_renderer.hpp  rotation.cpp  rotation.hpp  skybox.cpp  skybox.hpp
src/object/: axes.cpp  axes.hpp  cube.cpp  cube.hpp  grid.cpp  grid.hpp  objects.hpp
